Fix post settings
